[gd_scene load_steps=6 format=3 uid="uid://ctkwq86y1xbhs"]

[ext_resource type="Script" uid="uid://b7s04d047tpdk" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/MetricsContainer/metrics_container.gd" id="1_jfbub"]
[ext_resource type="PackedScene" uid="uid://ch2o2250h2fju" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/MetricsContainer/parts/HumePanel.tscn" id="3_cngb5"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="3_v7ywe"]
[ext_resource type="PackedScene" uid="uid://cr4jyhkulokw2" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/MetricsContainer/parts/MetricMiniItem.tscn" id="7_srt4y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7s7se"]

[node name="MetricsContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7s7se")
script = ExtResource("1_jfbub")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
offset_right = 294.0
offset_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="MetricsPanel" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 5

[node name="Morale" parent="Control/MarginContainer/VBoxContainer/MetricsPanel" instance=ExtResource("7_srt4y")]
layout_mode = 2
size_flags_horizontal = 1

[node name="Safety" parent="Control/MarginContainer/VBoxContainer/MetricsPanel" instance=ExtResource("7_srt4y")]
layout_mode = 2
size_flags_horizontal = 1
assigned_metric = 1
value = -4

[node name="Readiness" parent="Control/MarginContainer/VBoxContainer/MetricsPanel" instance=ExtResource("7_srt4y")]
layout_mode = 2
size_flags_horizontal = 1
assigned_metric = 2
value = 2

[node name="HumePanel" parent="Control/MarginContainer/VBoxContainer" instance=ExtResource("3_cngb5")]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="StatusLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "STATUS"
label_settings = ExtResource("3_v7ywe")
horizontal_alignment = 1
